--- a/01 Website/index.html
+++ b/01 Website/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Simple Page Layout</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Simple Page Layout</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Bootstrap Files -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!-- Bootstrap Files -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-	<!-- Page CSS -->
-	<link rel="stylesheet" href="css/page.css">
+    <!-- Page CSS -->
+    <link rel="stylesheet" href="css/page.css">
 
 </head>
+
 <body>
 
-	<!-- Content goes here -->
+    <div class="d-flex">
+        <img src="images/carved-rock-logo-black.png" class="logo">
+    </div>
+    <!-- <div class="d-flex">
+        <div class="testBox">Test 1</div>
+        <div class="testBox">Test 2</div>
+        <div class="testBox">Test 3</div>
+    </div> -->
 
-	<!-- Bootstrap Files -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- Bootstrap Files -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-	<!-- Page JS -->
-	<script src="js/page.js"></script>
+    <!-- Page JS -->
+    <script src="js/page.js"></script>
 
 </body>
+
 </html>
