--- a/01 Website/index.html
+++ b/01 Website/index.html
@@ -15,10 +15,15 @@
 
 <body>
 
+    <!-- Logo -->
     <div class="d-flex">
         <img src="images/carved-rock-logo-black.png" class="logo">
     </div>
-    <!-- <div class="d-flex">
+
+    <!-- Banner -->
+    <div class="d-flex flex-row banner"></div>
+
+    <!-- <div class="d-flex flex-row">
         <div class="testBox">Test 1</div>
         <div class="testBox">Test 2</div>
         <div class="testBox">Test 3</div>
