--- a/01 Website/index.html
+++ b/01 Website/index.html
@@ -23,6 +23,25 @@
     <!-- Banner -->
     <div class="d-flex flex-row banner"></div>
 
+    <!-- Cards -->
+    <div class="d-flex">
+        <div class="callOuts d-flex flex-column">
+            <img src="images/mountain_Blue.png" class="d-block">
+            <h3>Climbing</h3>
+            <p>Get your climbing shoes ready!</p>
+        </div>
+        <div class="callOuts d-flex flex-column">
+            <img src="images/shoe_Blue.png" class="d-block">
+            <h3>Running</h3>
+            <p>Run away from your troubles!</p>
+        </div>
+        <div class="callOuts d-flex flex-column">
+            <img src="images/bicycle_Blue.png" class="d-block">
+            <h3>Bicycling</h3>
+            <p>Running not fast enough? Get a bike.</p>
+        </div>
+    </div>
+
     <!-- <div class="d-flex flex-row">
         <div class="testBox">Test 1</div>
         <div class="testBox">Test 2</div>
