--- a/01 Website/index.html
+++ b/01 Website/index.html
@@ -42,6 +42,31 @@
         </div>
     </div>
 
+    <!-- Text and image -->
+    <div class="d-flex">
+        <div class="w-25">
+            <img src="images/shutterstock_422560537.jpg" class="img-fluid">
+        </div>
+        <div class="w-75">
+            <h4>Title Section</h4>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto magni velit qui quibusdam eum? Inventore rem, nesciunt deserunt aperiam culpa aspernatur voluptatum explicabo optio voluptate qui quisquam sequi consequuntur odio!</p>
+            <a href="#" class="btn btn-primary">Learn More</a>
+        </div>
+    </div>
+    <div class="d-flex bottomArea">
+        <div class="w-60">
+            <img src="images/carved-rock-logo-white.png" class="img-fluid h-25">
+            <h5>About Us</h5>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="d-flex flex-column">
+            <h5>Contact Us</h5>
+            <div>123 W Jenkins St</div>
+            <div>555-5555</div>
+            <div>info@carvedrock.com</div>
+        </div>
+    </div>
+
     <!-- <div class="d-flex flex-row">
         <div class="testBox">Test 1</div>
         <div class="testBox">Test 2</div>
