--- a/01 Website/index.html
+++ b/01 Website/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <!-- Logo -->
-    <div class="d-flex">
+    <div class="d-flex justify-content-center">
         <img src="images/carved-rock-logo-black.png" class="logo">
     </div>
 
@@ -24,7 +24,7 @@
     <div class="d-flex flex-row banner"></div>
 
     <!-- Cards -->
-    <div class="d-flex">
+    <div class="d-flex justify-content-around">
         <div class="callOuts d-flex flex-column">
             <img src="images/mountain_Blue.png" class="d-block">
             <h3>Climbing</h3>
