--- a/01 Website/index.html
+++ b/01 Website/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <!-- Text and image -->
-    <div class="d-flex">
+    <div class="d-flex align-items-center">
         <div class="w-25">
             <img src="images/shutterstock_422560537.jpg" class="img-fluid">
         </div>
