--- a/01 Website/index.html
+++ b/01 Website/index.html
@@ -17,25 +17,25 @@
 
     <!-- Logo -->
     <div class="d-flex justify-content-center">
-        <img src="images/carved-rock-logo-black.png" class="logo">
+        <img src="images/carved-rock-logo-black.png" class="logo p-3">
     </div>
 
     <!-- Banner -->
     <div class="d-flex flex-row banner"></div>
 
     <!-- Cards -->
-    <div class="d-flex justify-content-around">
-        <div class="callOuts d-flex flex-column">
+    <div class="d-flex justify-content-around my-3 px-5 text-center">
+        <div class="callOuts d-flex flex-column p-4 m-2">
             <img src="images/mountain_Blue.png" class="d-block">
             <h3>Climbing</h3>
             <p>Get your climbing shoes ready!</p>
         </div>
-        <div class="callOuts d-flex flex-column">
+        <div class="callOuts d-flex flex-column p-4 m-2">
             <img src="images/shoe_Blue.png" class="d-block">
             <h3>Running</h3>
             <p>Run away from your troubles!</p>
         </div>
-        <div class="callOuts d-flex flex-column">
+        <div class="callOuts d-flex flex-column p-4 m-2">
             <img src="images/bicycle_Blue.png" class="d-block">
             <h3>Bicycling</h3>
             <p>Running not fast enough? Get a bike.</p>
@@ -43,23 +43,23 @@
     </div>
 
     <!-- Text and image -->
-    <div class="d-flex align-items-center">
-        <div class="w-25">
+    <div class="d-flex align-items-center px-5 mb-3">
+        <div class="w-25 mr-3">
             <img src="images/shutterstock_422560537.jpg" class="img-fluid">
         </div>
-        <div class="w-75">
+        <div class="w-75 p-3">
             <h4>Title Section</h4>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto magni velit qui quibusdam eum? Inventore rem, nesciunt deserunt aperiam culpa aspernatur voluptatum explicabo optio voluptate qui quisquam sequi consequuntur odio!</p>
             <a href="#" class="btn btn-primary">Learn More</a>
         </div>
     </div>
-    <div class="d-flex bottomArea">
+    <div class="d-flex bottomArea p-3">
         <div class="w-60">
             <img src="images/carved-rock-logo-white.png" class="img-fluid h-25">
             <h5>About Us</h5>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
         </div>
-        <div class="d-flex flex-column">
+        <div class="d-flex flex-column mt-3">
             <h5>Contact Us</h5>
             <div>123 W Jenkins St</div>
             <div>555-5555</div>
