--- a/01 Website/index.html
+++ b/01 Website/index.html
@@ -25,18 +25,18 @@
 
     <!-- Cards -->
     <div class="d-flex justify-content-around my-3 px-5 text-center">
-        <div class="callOuts d-flex flex-column p-4 m-2">
-            <img src="images/mountain_Blue.png" class="d-block">
+        <div class="callOuts d-flex flex-column p-4 m-2 flex-fill">
+            <img src="images/mountain_Blue.png" class="d-block mx-auto">
             <h3>Climbing</h3>
             <p>Get your climbing shoes ready!</p>
         </div>
-        <div class="callOuts d-flex flex-column p-4 m-2">
-            <img src="images/shoe_Blue.png" class="d-block">
+        <div class="callOuts d-flex flex-column p-4 m-2 flex-fill">
+            <img src="images/shoe_Blue.png" class="d-block mx-auto">
             <h3>Running</h3>
             <p>Run away from your troubles!</p>
         </div>
-        <div class="callOuts d-flex flex-column p-4 m-2">
-            <img src="images/bicycle_Blue.png" class="d-block">
+        <div class="callOuts d-flex flex-column p-4 m-2 flex-fill">
+            <img src="images/bicycle_Blue.png" class="d-block mx-auto">
             <h3>Bicycling</h3>
             <p>Running not fast enough? Get a bike.</p>
         </div>
