--- a/01 Website/index.html
+++ b/01 Website/index.html
@@ -24,7 +24,7 @@
     <div class="d-flex flex-row banner"></div>
 
     <!-- Cards -->
-    <div class="d-flex justify-content-around my-3 px-5 text-center">
+    <div class="d-flex justify-content-around my-3 px-5 text-center flex-wrap">
         <div class="callOuts d-flex flex-column p-4 m-2 flex-fill">
             <img src="images/mountain_Blue.png" class="d-block mx-auto">
             <h3>Climbing</h3>
@@ -43,7 +43,7 @@
     </div>
 
     <!-- Text and image -->
-    <div class="d-flex align-items-center px-5 mb-3">
+    <div class="d-flex flex-column flex-sm-row align-items-center px-2 px-sm-5 mb-3">
         <div class="w-25 mr-3">
             <img src="images/shutterstock_422560537.jpg" class="img-fluid">
         </div>
