--- a/02 Game/index.html
+++ b/02 Game/index.html
@@ -31,7 +31,18 @@
     <div class="container py-md-3 py-sm-1">
 
         <!-- Game Board -->
+        <div class="d-flex flex-row justify-content-around flex-wrap">
+            <div class="gamePiece m-2 d-flex">100</div>
+            <div class="gamePiece m-2 d-flex">100</div>
+            <div class="gamePiece m-2 d-flex">100</div>
+            <div class="gamePiece m-2 d-flex">200</div>
+            <div class="gamePiece m-2 d-flex">200</div>
+            <div class="gamePiece m-2 d-flex">200</div>
+            <div class="gamePiece m-2 d-flex">500</div>
+            <div class="gamePiece m-2 d-flex">500</div>
+            <div class="gamePiece m-2 d-flex">500</div>
 
+        </div>
     </div>
 
     <!-- Copyright -->
