--- a/02 Game/index.html
+++ b/02 Game/index.html
@@ -32,15 +32,15 @@
 
         <!-- Game Board -->
         <div class="d-flex flex-row justify-content-around flex-wrap">
-            <div class="gamePiece m-2 d-flex">100</div>
-            <div class="gamePiece m-2 d-flex">100</div>
-            <div class="gamePiece m-2 d-flex">100</div>
-            <div class="gamePiece m-2 d-flex">200</div>
-            <div class="gamePiece m-2 d-flex">200</div>
-            <div class="gamePiece m-2 d-flex">200</div>
-            <div class="gamePiece m-2 d-flex">500</div>
-            <div class="gamePiece m-2 d-flex">500</div>
-            <div class="gamePiece m-2 d-flex">500</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">100</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">100</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">100</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">200</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">200</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">200</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">500</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">500</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">500</div>
 
         </div>
     </div>
