Added question modals

--- a/02 Game/index.html
+++ b/02 Game/index.html
@@ -32,15 +32,15 @@
 
         <!-- Game Board -->
         <div class="d-flex flex-row justify-content-around flex-wrap">
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">100</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">100</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">100</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">200</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">200</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">200</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">500</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">500</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center">500</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">100</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">100</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">100</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">200</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">200</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">200</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">500</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">500</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">500</div>
 
         </div>
     </div>
@@ -62,7 +62,21 @@
 					</button>
                 </div>
                 <div class="modal-body">
-
+                    <div class="d-flex flex-flow">
+                        <div class="d-block">
+                            <img src="images/forest.jpg" class="circleImage" id="questionImage">
+                        </div>
+                        <div class="ml-3 mt-2 align-items-center">
+                            <p class="smallLabel" id="questionLabel">Small label goes here...</p>
+                            <h4 id="questionText">What is the answer to this question?</h4>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column py-3">
+                        <button type="button" class="btn btn-primary btn-lg    mb-2" id="optionA">Option A</button>
+                        <button type="button" class="btn btn-primary btn-lg mb-2" id="optionB">Option B</button>
+                        <button type="button" class="btn btn-primary btn-lg mb-2" id="optionC">Option C</button>
+                        <button type="button" class="btn btn-primary btn-lg" id="optionD">Option D</button>
+                    </div>
                 </div>
             </div>
         </div>
