--- a/02 Game/index.html
+++ b/02 Game/index.html
@@ -23,7 +23,7 @@
             <img src="images/SmallLogo.png" class="img-fluid smallLogo">
         </div>
         <div class="py-2">
-            <img src="images/leaderboard.png" class="leaderboard">
+            <img src="images/leaderboard.png" class="leaderboard" data-toggle="modal" data-target="#leaderBoard">
         </div>
     </div>
 
@@ -64,7 +64,7 @@
                 <div class="modal-body">
                     <div class="d-flex flex-flow">
                         <div class="d-block">
-                            <img src="images/forest.jpg" class="circleImage" id="questionImage">
+                            <img src="images/forest.jpg" class="circleImage rounded" id="questionImage">
                         </div>
                         <div class="ml-3 mt-2 align-items-center">
                             <p class="smallLabel" id="questionLabel">Small label goes here...</p>
