--- a/02 Game/index.html
+++ b/02 Game/index.html
@@ -33,14 +33,14 @@
         <!-- Game Board -->
         <div class="d-flex flex-row justify-content-around flex-wrap">
             <div class="gamePiece m-2 d-flex justify-content-center align-items-center" onClick="showQuestion(1)">100</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">100</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">100</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">200</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">200</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">200</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">500</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">500</div>
-            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#questionModal">500</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" onClick="showQuestion(2)">100</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" onClick="showQuestion(3)">100</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" onClick="showQuestion(4)">200</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" onClick="showQuestion(5)">200</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" onClick="showQuestion(6)">200</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" onClick="showQuestion(7)">500</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" onClick="showQuestion(8)">500</div>
+            <div class="gamePiece m-2 d-flex justify-content-center align-items-center" onClick="showQuestion(9)">500</div>
 
         </div>
     </div>
